--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -559,6 +559,9 @@ img {
 .position-absolute {
   position: absolute;
 }
+.text-center {
+  text-align: center;
+}
 /*=================================================================*/
 .d-2xl-none {
   display: none;
