--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -116,6 +116,51 @@
     height: 20px;
     background-position: -176px -466px;
   }
+  &.icon-dot {
+    width: 19px;
+    height: 5px;
+    background-position: -27px -437px;
+  }
+  &.icon-star {
+    width: 20px;
+    height: 20px;
+    background-position: -25px -179px;
+  }
+  &.icon-clock {
+    width: 20px;
+    height: 21px;
+    background-position: -93px -179px;
+  }
+  &.icon-play {
+    width: 67px;
+    height: 81px;
+    background-position: -26px -333px;
+  }
+  &.icon-facebook {
+    width: 32px;
+    height: 32px;
+    background-position: -27px -503px;
+  }
+  &.icon-twitter {
+    width: 32px;
+    height: 32px;
+    background-position: -110px -503px;
+  }
+  &.icon-rss {
+    width: 32px;
+    height: 32px;
+    background-position: -151px -503px;
+  }
+  &.icon-linkedin {
+    width: 32px;
+    height: 32px;
+    background-position: -192px -503px;
+  }
+  &.icon-email {
+    width: 32px;
+    height: 32px;
+    background-position: -233px -503px;
+  }
 }
 .iconnew-tgtt {
   background: url("../images/icons-27052020.webp") no-repeat -54px 0;
