--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -89,6 +89,75 @@
   grid-template-columns: 1fr 300px;
   grid-gap: 30px;
 }
+[data-icontype="1"] .thumb-item,
+[data-icontype="2"] .thumb-item,
+[data-icontype="3"] .thumb-item,
+[data-icontype="20"] .thumb-item,
+[data-icontype="27"] .thumb-item {
+  position: relative;
+}
+
+.home-hightlight [data-icontype="1"] .thumb-item:before,
+.box-other [data-icontype="1"] .thumb-item:before,
+.widget [data-icontype="1"] .thumb-item:before {
+  content: "";
+  position: absolute;
+  bottom: 10px;
+  left: 10px;
+  background: url("../images/news-icons.webp") no-repeat -262px 0;
+  background-size: 362px 30px;
+  width: 30px;
+  height: 30px;
+  z-index: 1;
+}
+.home-boxnewday [data-icontype="1"] .title::before,
+.home-hightlight [data-icontype="1"] .title:before {
+  content: "";
+  display: inline-block;
+  margin-right: 5px;
+  background: url("../images/news-icons.webp") no-repeat -205px 0;
+  background-size: 362px 30px;
+  width: 14px;
+  height: 13px;
+  z-index: 1;
+  margin-bottom: -2px;
+}
+.box-event-home [data-icontype="2"] .title:before,
+.home-boxnewday [data-icontype="2"] .title:before,
+.home-hightlight [data-icontype="2"] .title:before {
+  content: "";
+  display: inline-block;
+  margin-right: 5px;
+  background: url("../images/news-icons.webp") no-repeat -243px 0;
+  background-size: 362px 30px;
+  width: 14px;
+  height: 14px;
+  margin-bottom: -2px;
+}
+.home-hightlight [data-icontype="20"] .thumb-item:before {
+  content: "";
+  position: absolute;
+  bottom: 10px;
+  left: 10px;
+  background: url("../images/news-icons.webp") no-repeat -297px 0;
+  background-size: 362px 30px;
+  width: 30px;
+  height: 30px;
+  z-index: 1;
+}
+
+.home-boxnewday [data-icontype="2"] .thumb-item:before,
+.widget [data-icontype="2"] .thumb-item:before {
+  content: "";
+  position: absolute;
+  bottom: 10px;
+  left: 10px;
+  background: url("../images/news-icons.webp") no-repeat -332px 0;
+  background-size: 362px 30px;
+  width: 30px;
+  height: 30px;
+  z-index: 1;
+}
 .hightlight-top {
   display: grid;
   grid-template-columns: 425px 1fr;
@@ -128,4 +197,440 @@
   padding-bottom: 15px;
   margin-bottom: 15px;
   border-bottom: 1px solid #eee;
+}
+
+.hightlight-bot {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 26px;
+  padding-bottom: 25px;
+  margin-bottom: 25px;
+  border-bottom: 3px solid #008837;
+}
+.home-article {
+  display: flex;
+  width: 100%;
+
+  &:not(:last-child) {
+    padding-bottom: 25px;
+    margin-bottom: 25px;
+    border-bottom: 1px solid #eee;
+  }
+  &:last-child {
+    padding-bottom: 25px;
+  }
+
+  & .article-img {
+    width: 40%;
+    flex-shrink: 0;
+  }
+
+  & .article-content {
+    flex: 1;
+    margin-left: 15px;
+  }
+}
+
+.cate-time {
+  display: flex;
+  align-items: center;
+
+  & span {
+    display: inline-flex;
+    align-items: center;
+  }
+
+  & span + span::before {
+    content: "";
+    width: 2px;
+    height: 2px;
+    border-radius: 50%;
+    background: #6c6e70;
+    margin: 0 9px;
+  }
+
+  & .time {
+    display: none;
+  }
+}
+
+.box-event-home-wrapper {
+  background-color: #eae0c7;
+}
+.box-event-home {
+  padding: 20px;
+}
+.box-event-home-large-wrapper {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 15px;
+}
+.box-event-home-large {
+  padding-bottom: 25px;
+  margin-bottom: 25px;
+  border-bottom: 1px solid #eee;
+}
+.box-event-home-small {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+
+  & .box-event-home-small-item:first-child {
+    padding-right: 10px;
+  }
+  & .box-event-home-small-item:not(:first-child) {
+    border-left: 1px solid #eee;
+    padding-left: 15px;
+  }
+}
+
+.main-block-cate {
+  & .heading {
+    padding: 13px 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 23px;
+    border-bottom: 1px solid #eee;
+    position: relative;
+  }
+
+  & .dot-box .icon-dot {
+    cursor: pointer;
+    font-size: 0;
+    position: absolute;
+    right: 0;
+    top: 50%;
+    transform: translateY(-50%);
+  }
+
+  & .dot-box:hover .icon-dot {
+    width: 30px;
+    line-height: 29px;
+    height: 30px;
+    font-size: 20px;
+    background: #008000;
+    color: #fff;
+    text-align: center;
+    font-family: arial;
+    font-style: normal;
+  }
+  & .dot-box .cate-child {
+    position: absolute;
+    top: 49px;
+    left: 0;
+    right: 0;
+    z-index: 999;
+    background: #eee;
+    display: grid;
+    grid-template-columns: 31% 31% 31%;
+    grid-column-gap: 3.5%;
+    grid-row-gap: 15px;
+    padding: 20px;
+    transition: all 0.2s ease;
+    visibility: hidden;
+    opacity: 0;
+
+    & li {
+      flex-shrink: 0;
+      font-size: 13px;
+      font-weight: 500;
+      color: #6c6e70;
+      background: #fff;
+      border-radius: 5px;
+      text-align: center;
+
+      & a {
+        display: block;
+        padding: 10px;
+      }
+    }
+  }
+
+  & .dot-box:hover .cate-child {
+    visibility: visible;
+    opacity: 1;
+  }
+}
+.farmer-container {
+  margin-bottom: 25px;
+  border-bottom: 1px solid #eee;
+}
+.home-boxnewday {
+  display: grid;
+  grid-template-columns: 1fr 255px;
+  grid-gap: 20px;
+  border-bottom: 1px solid #eee;
+  margin-bottom: 25px;
+}
+.boxnews-left {
+  background: #f9f9f9;
+  padding: 20px;
+  & .boxnews-small {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 15px;
+
+    & .boxnews-small-item-title {
+      margin-top: 5px;
+    }
+  }
+}
+.boxnews-right {
+  padding: 20px 0;
+  max-height: 550px;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  & .boxnewsright-number {
+    font-size: 14px;
+    font-weight: bold;
+    color: #80868b;
+    margin-right: 10px;
+  }
+  & .boxnewsright-title i {
+    margin-right: 10px;
+  }
+  & .boxnewsright-title > a {
+    text-transform: capitalize;
+    display: flex;
+    align-items: center;
+  }
+  & .boxnewsright-container {
+    counter-reset: my-badass-counter;
+    max-height: 100%;
+    overflow-y: scroll;
+
+    &.latest-news-container {
+      padding: 10px;
+      border: 1px solid #eee;
+    }
+
+    &::-webkit-scrollbar {
+      width: 3px;
+    }
+    &::-webkit-scrollbar-thumb {
+      background: transparent;
+    }
+    &::-webkit-scrollbar-thumb {
+      // background: rgba(143, 143, 143, 0.35);
+      background: transparent;
+      border-radius: 5px;
+    }
+    &::-webkit-scrollbar-track {
+      background: none;
+    }
+  }
+  & .boxnewsright-item {
+    display: flex;
+    padding-bottom: 15px;
+    margin-bottom: 15px;
+    border-bottom: 1px solid #eee;
+  }
+
+  & .boxnewsright-img {
+    width: 60px;
+    flex-shrink: 0;
+
+    & .thumb-5x3 {
+      padding-bottom: 100%;
+    }
+  }
+  & .boxnewsright-title {
+    // flex: 1;
+    padding-right: 10px;
+  }
+  &:after {
+    content: "";
+    background: linear-gradient(to top, #fff, rgba(255, 255, 255, 0));
+    height: 69px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+  }
+  &:hover::after {
+    content: none;
+  }
+  &:hover .boxnewsright-container::-webkit-scrollbar-thumb {
+    background: rgba(143, 143, 143, 0.35);
+  }
+}
+.boxnewsleft-small .item {
+  display: flex;
+  padding-top: 15px;
+  margin-top: 15px;
+  border-top: 1px solid #eee;
+  &:before {
+    content: "";
+    width: 5px;
+    height: 5px;
+    border-radius: 50%;
+    flex-shrink: 0;
+    margin-top: 6px;
+    margin-right: 12px;
+    background: #008837;
+  }
+}
+.latest-news-container {
+  & .boxnewsright-number {
+    color: #008000;
+  }
+}
+.box-other {
+  padding-bottom: 25px;
+  margin-bottom: 25px;
+  border-bottom: 1px solid #eee;
+  & .box-event-home-large-wrapper {
+    grid-template-columns: 1fr 210px;
+  }
+}
+
+.home-boxvideolistrela {
+  display: grid;
+  grid-template-columns: 1fr 210px;
+  grid-gap: 15px;
+  padding: 25px 0;
+  margin-bottom: 25px;
+  border-top: 1px solid #eee;
+  border-bottom: 1px solid #eee;
+
+  & .video-right-small .item {
+    padding: 10px 0;
+    margin-top: 0;
+    border-top: none;
+    &:first-child {
+      border-top: 1px dotted #ccc;
+    }
+  }
+  & .video-left-img i {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+  }
+}
+
+.contain {
+  & .readmore {
+    margin-bottom: 25px;
+    text-align: center;
+
+    & a {
+      margin: auto;
+      display: inline-block;
+      height: 30px;
+      font-family: Arial, sans-serif;
+      color: #fff;
+      border-radius: 5px;
+      background-color: #008837;
+      padding: 5px 18px;
+    }
+  }
+}
+
+//
+.widget {
+  border-radius: 5px;
+  border: solid 1px #e9eaee;
+  background-color: #f9f9f9;
+  padding: 15px 0;
+  margin-bottom: 25px;
+}
+
+// media
+.media-home {
+  background-color: #f9f9f9;
+  padding: 25px 24.5px;
+  border: 1px solid #eee;
+  border-radius: 5px;
+  border-top: 3px solid #008837;
+  margin-bottom: 35px;
+
+  & .title-main {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 25px;
+
+    & .title-other {
+      display: flex;
+      margin: 0 -15px;
+
+      & .item {
+        padding: 0 15px;
+        border-right: 1px solid #eee;
+      }
+
+      & .item .title {
+        font-size: 15px;
+        font-weight: 500;
+        text-transform: uppercase;
+        color: #6c6e70;
+        display: flex;
+        align-items: center;
+
+        & .icon {
+          margin-right: 4px;
+        }
+      }
+    }
+  }
+}
+
+.media-large-img {
+  & i {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+  }
+}
+.overlay-50 {
+  position: absolute;
+  height: 50%;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  background: linear-gradient(0deg, black, transparent);
+}
+.caption {
+  position: absolute;
+  padding: 10px;
+  left: 0;
+  bottom: 0;
+}
+.media-contain {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 30px 20px;
+}
+.media-large {
+  grid-column: 1/3;
+  grid-row: 1/3;
+}
+.main-block.home-boxnews {
+  border-top: 3px solid #eee;
+  margin-bottom: 25px;
+}
+.home-boxnews-container {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 20px;
+
+  & .large {
+    grid-column: 1/3;
+  }
+
+  & .small li {
+    padding-top: 13px;
+    margin-top: 13px;
+    border-top: 1px solid #eee;
+    color: #6c6e70;
+  }
+}
+
+.home-boxnewsdouble {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 24px;
 }
