--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 html,
 body,
 div,
@@ -1079,14 +1078,14 @@ header #nav {
   border-bottom: 3px solid #008837;
   border-top: 1px solid rgba(108, 110, 112, 0.1);
 }
-header #nav #nav.sticky:not(.active) {
+header #nav.sticky:not(.active) {
   position: fixed;
   left: 0;
   right: 0;
   top: 0;
   z-index: 9999;
 }
-header #nav .sticky:not(.headerother) {
+header #nav.sticky:not(.headerother) {
   background: #fff;
 }
 header #nav .nav-bar {
@@ -1332,7 +1331,8 @@ header #nav .icon-expandmenu.active {
 
 .home-hightlight [data-icontype="1"] .thumb-item:before,
 .box-other [data-icontype="1"] .thumb-item:before,
-.widget [data-icontype="1"] .thumb-item:before {
+.widget [data-icontype="1"] .thumb-item:before,
+.home-articles [data-icontype="1"] .thumb-item:before {
   content: "";
   position: absolute;
   bottom: 10px;
@@ -1370,7 +1370,8 @@ header #nav .icon-expandmenu.active {
   margin-bottom: -2px;
 }
 
-.home-hightlight [data-icontype="20"] .thumb-item:before {
+.home-hightlight [data-icontype="20"] .thumb-item:before,
+.home-articles [data-icontype="20"] .thumb-item:before {
   content: "";
   position: absolute;
   bottom: 10px;
@@ -1383,7 +1384,9 @@ header #nav .icon-expandmenu.active {
 }
 
 .home-boxnewday [data-icontype="2"] .thumb-item:before,
-.widget [data-icontype="2"] .thumb-item:before {
+.widget [data-icontype="2"] .thumb-item:before,
+.home-hightlight [data-icontype="3"] .thumb-item:before,
+.home-articles [data-icontype="3"] .thumb-item:before {
   content: "";
   position: absolute;
   bottom: 10px;
@@ -1945,98 +1948,159 @@ header #nav .icon-expandmenu.active {
   margin: auto;
 }
 
-.full-screen-picture-wrapper {
-  width: 100%;
-  height: 100%;
+#cmt-account-header {
   position: fixed;
   top: 0;
-  right: 0;
-  bottom: 0;
   left: 0;
-  background: #000;
-  z-index: 10000;
-  padding-top: 20px;
+  width: 100%;
+  height: 100%;
+  background: rgba(100, 100, 100, 0.45);
+  transition: ease 0.3s;
+  z-index: 9999999;
   display: none;
 }
-
-.full-screen-picture-wrapper.open {
+#cmt-account-header .wrap {
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  border-radius: 10px;
+  transform: translate(-50%, -50%);
+  width: 350px;
+  padding-bottom: 15px;
+  background: #fff;
+  animation: 0s ease 0s 1 normal none running none;
+}
+#cmt-account-header .wrap .tabs {
+  list-style: none;
+  background: #ebebeb;
+  margin-bottom: 22px;
+  display: flex;
+  border-radius: 10px 10px 0 0;
+  position: relative;
+}
+#cmt-account-header .wrap .tabs li {
+  display: inline-block;
+  font: 500 16px/17px Roboto;
+  text-transform: uppercase;
+  width: 50%;
+  padding: 10px 0;
+  text-align: center;
+  color: #8f8f8f;
+}
+#cmt-account-header .wrap .tabs li:first-child {
+  border-radius: 10px 0 0 0;
+}
+#cmt-account-header .wrap .tabs li.active {
+  color: #008837;
+  background: #fff;
+  font-size: 16px;
+  line-height: 17px;
+  font-weight: 700;
+}
+#cmt-account-header .wrap .tabs li:nth-child(2) {
+  border-radius: 0 10px 0 0;
+}
+#cmt-account-header .wrap .tabs li.close {
+  width: 32px;
+  font-size: 26px;
+  font-family: Roboto;
+  float: right;
+  position: absolute;
+  right: -10px;
+  top: -10px;
+  padding: 8px 0;
+  box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.16);
+  background: #fff;
+  border-radius: 50%;
+}
+#cmt-account-header .wrap #cmt_alert {
+  font: normal 16px/22px Roboto;
+  color: #6c6e70;
+  padding: 0 20px 0 20px;
+  margin-bottom: 15px;
+}
+#cmt-account-header .wrap .tab-content {
+  display: none;
+  margin: 0 20px 0 20px;
+}
+#cmt-account-header .wrap .tab-content input {
+  display: block;
+  width: calc(100% - 10px);
+  padding: 8px 5px;
+  border: none;
+  border-radius: 8px;
+  color: #6c6e70;
+  background: #f9f9f9;
+  font: normal 17px/19px Roboto;
+}
+#cmt-account-header .wrap .tab-content .box_pass {
+  position: relative;
+}
+#cmt-account-header .wrap .tab-content .btn_login {
+  text-align: center;
+  display: block;
+}
+#cmt-account-header .wrap .tab-content .btn {
+  background: #008837;
+  font-family: Roboto;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 19px;
+  color: #fff;
+  display: inline-block;
+  padding: 5px 20px 6px 20px;
+  border-radius: 4px;
+  margin-top: 30px;
+  margin-bottom: 15px;
+}
+#cmt-account-header .wrap .tab-content.active {
   display: block;
 }
 
-.full-screen-picture-block {
+#cmt-account-social {
+  display: flex;
+}
+#cmt-account-social button {
+  display: flex;
+  align-items: center;
+  border: 1px solid #dedede;
+  background: 0 0;
+  border-radius: 4px;
+  padding: 5px 7px;
+  margin-right: 10px;
+}
+#cmt-account-social .iconnew-fb, #cmt-account-social .iconnew-gg {
+  width: 15px;
+  height: 15px;
+  display: inline-block;
+  margin-right: 5px;
+}
+#cmt-account-social .iconnew-fb {
+  background: url("../images/icons-27052020.webp") no-repeat 0 0;
+  background-size: 40px 15px;
+}
+#cmt-account-social .iconnew-gg {
+  background: url("../images/icons-27052020.webp") no-repeat -25px 0;
+  background-size: 57px 20px;
+}
+
+input#_login_email::before {
+  background-size: 17px 17px;
+  width: 17px;
+  content: "";
+  position: absolute;
+  top: 5px;
+  left: 10px;
+}
+
+input#_login_password {
+  margin-top: 10px;
+}
+
+input#_login_email {
+  margin-top: 20px;
   position: relative;
-  height: 100%;
-}
-
-.full-screen-picture {
-  max-width: 1920px;
-}
-
-.full-picture-large-img {
-  max-height: 70vh;
-  margin: auto;
-  width: auto;
-}
-
-.full-picture-large-text {
-  max-width: 360px;
-  position: absolute;
-  top: 50px;
-  right: 20px;
-  font-size: 14px;
-  font-family: "Arial", sans-serif;
-  line-height: 1.5;
-}
-
-.close-full-screen {
-  font-size: 29px;
-  position: absolute;
-  right: 16px;
-  top: 12px;
-  cursor: pointer;
-  z-index: 10000;
-}
-
-.full-picture-small {
-  max-width: 1200px;
-  margin: auto;
-  margin-top: 2rem;
-}
-
-.full-picture-small .slick-slide {
-  margin: 0 10px;
-  opacity: 0.6;
-}
-
-.full-picture-small .slick-slide.slick-current {
-  opacity: 1;
-}
-
-.full-picture-small .slick-prev:before {
-  content: "❮";
-}
-
-.full-picture-small .slick-next:before {
-  content: "❯";
-}
-
-.full-picture-small .slick-prev,
-.full-picture-small .slick-next {
-  width: 36px;
-  height: 36px;
-}
-
-.full-picture-small .slick-prev:before,
-.full-picture-small .slick-next:before {
-  font-size: 36px;
-}
-
-.full-picture-small .slick-prev {
-  left: -40px;
-}
-
-.full-picture-small .slick-next {
-  right: -40px;
 }
 
 #back-top {
