--- a/css/style.css
+++ b/css/style.css
@@ -1233,6 +1233,112 @@ header #nav .icon-expandmenu.active {
   margin-bottom: -4px;
 }
 
+#header-mb {
+  background: #fff;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 40px;
+  border-bottom: thin solid #008837;
+  line-height: 40px;
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.05);
+  z-index: 999;
+}
+#header-mb .left {
+  margin-top: -2px;
+}
+#header-mb .left .icon {
+  margin-right: 15px;
+}
+#header-mb .left h1 {
+  margin-block-start: 0;
+  margin-block-end: 0;
+  margin-inline-start: 0;
+  margin-inline-end: 0;
+  font-weight: normal;
+}
+#header-mb ul.right {
+  margin-top: 1px;
+}
+#header-mb ul.right li {
+  display: inline-block;
+  height: 25px;
+  line-height: 25px;
+}
+#header-mb ul.right li img {
+  display: inline-block;
+  margin-bottom: -2px;
+  width: 18px;
+}
+#header-mb ul.right li:not(:last-child) {
+  padding-right: 13px;
+  border-right: thin solid #e9eaee;
+  margin-right: 10px;
+}
+#header-mb ul.right li#top-link-account {
+  position: relative;
+}
+#header-mb ul.right li#top-link-account a {
+  font-size: 13px;
+  font-weight: bold;
+  color: #f00;
+}
+#header-mb .left h1, #header-mb .left div {
+  display: inline-block;
+}
+
+.icon {
+  display: inline-block;
+}
+
+.left {
+  float: left;
+}
+
+.right {
+  float: right;
+}
+
+.hidden {
+  display: none;
+}
+
+.icon.icon-menu {
+  background-image: url("../images/icon_menu.svg");
+  background-size: contain;
+  width: 17px;
+  height: 13px;
+  margin-bottom: 2px;
+  -webkit-filter: grayscale(100%);
+  filter: grayscale(100%);
+}
+
+.icon.icon-logo {
+  background-image: url("../images/logo.svg");
+  background-size: contain;
+  width: 117px;
+  height: 21px;
+  margin-bottom: -2px;
+}
+
+.header-mb {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.time-homepage {
+  align-items: center;
+}
+.time-homepage img {
+  margin-right: 5px;
+}
+
+#txt-time {
+  font: normal 11px/13px Roboto, sans-serif;
+}
+
 .main-top {
   padding: 15px 0;
   background: rgba(243, 243, 243, 0.31);
@@ -1431,6 +1537,11 @@ header #nav .icon-expandmenu.active {
   opacity: 1;
   color: rgba(0, 136, 55, 0.5);
 }
+.hightlight-top__slide .category {
+  color: #008837;
+  font: normal 13px/21px Roboto, sans-serif;
+  margin-bottom: 12px;
+}
 
 .hightlight-top__list-item:not(:last-child) {
   padding-bottom: 15px;
@@ -1485,6 +1596,10 @@ header #nav .icon-expandmenu.active {
   margin: 0 9px;
 }
 .cate-time .time {
+  display: none;
+}
+
+.cate-time-hide-pc {
   display: none;
 }
 
@@ -1854,6 +1969,17 @@ header #nav .icon-expandmenu.active {
   grid-gap: 24px;
 }
 
+.share-facebook {
+  align-items: center;
+  justify-content: end;
+  color: #6c6e70;
+  font: normal 12px Roboto;
+  margin-top: 12px;
+}
+.share-facebook img {
+  margin-right: 4px;
+}
+
 .header-ema {
   background: #265a44;
   color: #fefefe;
@@ -1959,6 +2085,9 @@ header #nav .icon-expandmenu.active {
   z-index: 9999999;
   display: none;
 }
+#cmt-account-header p {
+  margin-bottom: 15px;
+}
 #cmt-account-header .wrap {
   margin: 0;
   position: absolute;
@@ -2034,6 +2163,11 @@ header #nav .icon-expandmenu.active {
   background: #f9f9f9;
   font: normal 17px/19px Roboto;
 }
+#cmt-account-header .wrap .tab-content input#_sign_captcha {
+  width: 150px;
+  float: left;
+  display: inline-block;
+}
 #cmt-account-header .wrap .tab-content .box_pass {
   position: relative;
 }
@@ -2053,6 +2187,32 @@ header #nav .icon-expandmenu.active {
   border-radius: 4px;
   margin-top: 30px;
   margin-bottom: 15px;
+}
+#cmt-account-header .wrap .tab-content .label {
+  font: normal 14px/24px Roboto;
+  font-family: Arial, sans-serif;
+  display: inline-block;
+  color: #6c6e70;
+  margin-top: 10px;
+  position: relative;
+}
+#cmt-account-header .wrap .tab-content .label.confirm::after, #cmt-account-header .wrap .tab-content .label.email::after, #cmt-account-header .wrap .tab-content .label.password::after {
+  content: "*";
+  position: absolute;
+  top: 3px;
+  right: -8px;
+  color: #008837;
+  margin-left: 2px;
+}
+#cmt-account-header .wrap .tab-content #_img_captcha {
+  display: inline-block;
+  width: 85px;
+  height: 34px;
+  float: right;
+}
+#cmt-account-header .wrap .tab-content .btn-refresh {
+  float: right;
+  width: 32px;
 }
 #cmt-account-header .wrap .tab-content.active {
   display: block;
@@ -2103,14 +2263,52 @@ input#_login_email {
   position: relative;
 }
 
+::placeholder {
+  color: #c9c9c9;
+  opacity: 1;
+  font: normal 14px/19px Roboto;
+}
+
+:-ms-input-placeholder {
+  font: normal 14px/19px Roboto;
+  color: #c9c9c9;
+}
+
+::-ms-input-placeholder {
+  font: normal 14px/19px Roboto;
+  color: #c9c9c9;
+}
+
+.clickable {
+  cursor: pointer;
+}
+
+.iconew-eye {
+  width: 18px;
+  height: 18px;
+  background: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 612 612" width="18" height="18" fill="%23828282"><path d="M609.608,315.426c3.19-5.874,3.19-12.979,0-18.853c-58.464-107.643-172.5-180.72-303.607-180.72S60.857,188.931,2.393,296.573c-3.19,5.874-3.19,12.979,0,18.853C60.858,423.069,174.892,496.147,306,496.147S551.143,423.069,609.608,315.426z M306,451.855c-80.554,0-145.855-65.302-145.855-145.855S225.446,160.144,306,160.144S451.856,225.446,451.856,306S386.554,451.855,306,451.855z" /><path d="M306,231.67c-6.136,0-12.095,0.749-17.798,2.15c5.841,6.76,9.383,15.563,9.383,25.198c0,21.3-17.267,38.568-38.568,38.568c-9.635,0-18.438-3.541-25.198-9.383c-1.401,5.703-2.15,11.662-2.15,17.798c0,41.052,33.279,74.33,74.33,74.33s74.33-33.279,74.33-74.33S347.052,231.67,306,231.67z" /></svg>') no-repeat;
+  display: inline-block;
+  position: absolute;
+  right: 20px;
+  bottom: 8px;
+}
+
+.iconew-eye.closed {
+  background: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg" width="18px" height="18px" viewBox="0 0 24 24" fill="%23828282"> <path fill-rule="evenodd" clip-rule="evenodd" d="M20.5303 4.53033C20.8232 4.23744 20.8232 3.76256 20.5303 3.46967C20.2374 3.17678 19.7626 3.17678 19.4697 3.46967L3.46967 19.4697C3.17678 19.7626 3.17678 20.2374 3.46967 20.5303C3.76256 20.8232 4.23744 20.8232 4.53033 20.5303L7.37723 17.6834C8.74353 18.3266 10.3172 18.75 12 18.75C14.684 18.75 17.0903 17.6729 18.8206 16.345C19.6874 15.6797 20.4032 14.9376 20.9089 14.2089C21.4006 13.5003 21.75 12.7227 21.75 12C21.75 11.2773 21.4006 10.4997 20.9089 9.79115C20.4032 9.06244 19.6874 8.32028 18.8206 7.65503C18.5585 7.45385 18.2808 7.25842 17.989 7.07163L20.5303 4.53033ZM16.8995 8.16113L15.1287 9.93196C15.5213 10.5248 15.75 11.2357 15.75 12C15.75 14.0711 14.0711 15.75 12 15.75C11.2357 15.75 10.5248 15.5213 9.93196 15.1287L8.51524 16.5454C9.58077 16.9795 10.7621 17.25 12 17.25C14.2865 17.25 16.3802 16.3271 17.9073 15.155C18.6692 14.5703 19.2714 13.9374 19.6766 13.3536C20.0957 12.7497 20.25 12.2773 20.25 12C20.25 11.7227 20.0957 11.2503 19.6766 10.6464C19.2714 10.0626 18.6692 9.42972 17.9073 8.84497C17.5941 8.60461 17.2571 8.37472 16.8995 8.16113ZM11.0299 14.0307C11.3237 14.1713 11.6526 14.25 12 14.25C13.2426 14.25 14.25 13.2426 14.25 12C14.25 11.6526 14.1713 11.3237 14.0307 11.0299L11.0299 14.0307Z" /> <path d="M12 5.25C13.0323 5.25 14.0236 5.40934 14.9511 5.68101C15.1296 5.73328 15.1827 5.95662 15.0513 6.0881L14.2267 6.91265C14.1648 6.97451 14.0752 6.99928 13.99 6.97967C13.3506 6.83257 12.6839 6.75 12 6.75C9.71345 6.75 7.61978 7.67292 6.09267 8.84497C5.33078 9.42972 4.72857 10.0626 4.32343 10.6464C3.90431 11.2503 3.75 11.7227 3.75 12C3.75 12.2773 3.90431 12.7497 4.32343 13.3536C4.67725 13.8635 5.18138 14.4107 5.81091 14.9307C5.92677 15.0264 5.93781 15.2015 5.83156 15.3078L5.12265 16.0167C5.03234 16.107 4.88823 16.1149 4.79037 16.0329C4.09739 15.4517 3.51902 14.8255 3.0911 14.2089C2.59937 13.5003 2.25 12.7227 2.25 12C2.25 11.2773 2.59937 10.4997 3.0911 9.79115C3.59681 9.06244 4.31262 8.32028 5.17941 7.65503C6.90965 6.32708 9.31598 5.25 12 5.25Z" /> <path d="M12 8.25C12.1185 8.25 12.2357 8.25549 12.3513 8.26624C12.5482 8.28453 12.6194 8.51991 12.4796 8.6597L11.2674 9.87196C10.6141 10.0968 10.0968 10.6141 9.87196 11.2674L8.6597 12.4796C8.51991 12.6194 8.28453 12.5482 8.26624 12.3513C8.25549 12.2357 8.25 12.1185 8.25 12C8.25 9.92893 9.92893 8.25 12 8.25Z" /> </svg>') no-repeat;
+}
+
+.box_pass {
+  position: relative;
+}
+
 #back-top {
   position: fixed;
   right: 1rem;
   bottom: 2rem;
-  width: 56px;
-  height: 56px;
+  width: 2.5rem;
+  height: 2.5rem;
   background: #23533f;
-  border-radius: 50%;
+  border-radius: 0.25rem;
   display: flex;
   align-items: center;
   justify-content: center;
