--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -2,10 +2,10 @@
   position: fixed;
   right: 1rem;
   bottom: 2rem;
-  width: 56px;
-  height: 56px;
+  width: 2.5rem;
+  height: 2.5rem;
   background: #23533f;
-  border-radius: 50%;
+  border-radius: 0.25rem;
   display: flex;
   align-items: center;
   justify-content: center;
