--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,6 +5,7 @@
 @import "./header";
 @import "./index";
 @import "./cate";
+@import "./cate_dan_viet_talk";
 @import "./detail";
 @import "./emagazine";
 @import "./popup";
