--- a/css/responsive.css
+++ b/css/responsive.css
@@ -26,6 +26,19 @@
     display: flex;
   }
 
+  .hightlight-top,
+.topic-list {
+    max-width: 650px;
+  }
+
+  /*-------------------------------------------------------------*/
+}
+@media (max-width: 62em) {
+  .hightlight-top,
+.topic-list {
+    max-width: 490px;
+  }
+
   /*-------------------------------------------------------------*/
 }
 @media (max-width: 48em) {
@@ -39,6 +52,11 @@
 
   .d-md-flex {
     display: flex;
+  }
+
+  .hightlight-top,
+.topic-list {
+    max-width: 430px;
   }
 
   /*-------------------------------------------------------------*/
@@ -353,7 +371,124 @@
     border-bottom: 1px solid #eee;
   }
 
-  /*-------------------------------------------------------------*/
+  .footer {
+    background-color: #202124;
+    padding: 30px 20px 0 20px;
+    text-align: justify;
+    color: #6c6e70;
+    font: normal 12px/20px Roboto;
+    margin-top: 20px;
+  }
+  .footer p {
+    font-size: 14px;
+    padding-bottom: 15px;
+  }
+  .footer .footer-flex {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .footer .footer-bottom {
+    margin: 0 -20px;
+    background: #3d3d3d;
+    color: #8f8f8f;
+    font: normal 11px/16px Roboto;
+    padding: 15px 20px 11px 20px;
+  }
+
+  #back-top {
+    bottom: 9rem;
+  }
+
+  .main-top {
+    padding: 0;
+  }
+
+  /*-------------------------------------------------------------  cate*/
+  .primary-cate {
+    margin-bottom: 0;
+  }
+
+  .primary-cate-content {
+    padding: 12px 20px;
+  }
+
+  .breadcum-mb-heading,
+.breadcum-mb-item,
+.breadcum-mb-item .title-cate {
+    display: flex;
+    align-items: center;
+  }
+
+  .breadcum-mb-item a {
+    display: block;
+    margin-left: 4px;
+    margin-right: 4px;
+  }
+
+  .breadcum-mb-list {
+    position: relative;
+    padding: 12px 12px 0;
+    box-sizing: border-box;
+    background: #e9e9e9;
+    white-space: nowrap;
+    overflow-y: scroll;
+    display: none;
+  }
+  .breadcum-mb-list.show {
+    display: block;
+  }
+  .breadcum-mb-list li {
+    display: inline-block;
+    margin-right: 5px;
+    margin-bottom: 12px;
+    vertical-align: text-top;
+  }
+  .breadcum-mb-list li a {
+    height: 100%;
+    font-size: 13px;
+    line-height: 26px;
+    display: block;
+    padding: 0 10px;
+    color: #555;
+    font-weight: bold;
+    display: inline-block;
+    background: #fff;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
+    text-decoration: none;
+  }
+
+  .read-lot-mb-item {
+    display: flex;
+  }
+  .read-lot-mb-item:not(:last-child) {
+    padding-bottom: 15px;
+    margin-bottom: 15px;
+    border-bottom: 1px solid #eee;
+  }
+  .read-lot-mb-item .read-lot-mb-number {
+    font-size: 14px;
+    font-weight: bold;
+    margin-right: 10px;
+  }
+  .read-lot-mb-item .read-lot-mb-title {
+    padding-right: 10px;
+    flex: 1;
+  }
+  .read-lot-mb-item .read-lot-mb-img {
+    width: 80px;
+    flex-shrink: 0;
+  }
+  .read-lot-mb-item .read-lot-mb-img .thumb-5x3 {
+    padding-bottom: 100%;
+  }
+
+  /*======================================================================*/
+  .talk-container {
+    padding: 0 20px;
+  }
 }
 
 /*# sourceMappingURL=responsive.css.map */
