--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -26,7 +26,7 @@
 .title {
   display: block;
 }
-#footer {
+.footer {
   color: #6c6e70;
   font-size: 12px;
   background-color: #f9f9f9;
@@ -131,6 +131,54 @@
     }
     & > ul > li {
       margin-right: 10px;
+    }
+  }
+}
+#bottom-bar {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 56px;
+  -webkit-box-shadow: 0 -5px 6px rgb(0 0 0 / 5%);
+  box-shadow: 0 -5px 6px rgb(0 0 0 / 5%);
+  background-color: #fff;
+  line-height: 56px;
+  text-align: center;
+  z-index: 9999;
+  &.hide {
+    display: none;
+  }
+  & li {
+    width: 20%;
+    display: inline-block;
+    font: normal 13px RobotoMedium, sans-serif;
+    color: #6c6e70;
+    margin-top: 8px;
+
+    & svg {
+      width: 20px;
+      max-height: 20px;
+      height: auto;
+
+      & path {
+        fill: #6c6e70;
+      }
+    }
+    & .text {
+      display: block;
+      color: #6c6e70;
+      font: normal 11px RobotoMedium, sans-serif;
+    }
+  }
+  & li:not(:last-child) {
+    margin-right: 1.5%;
+  }
+  & li.active {
+    color: #008837;
+
+    & .text {
+      color: #008837;
     }
   }
 }
