--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -161,6 +161,16 @@
     height: 32px;
     background-position: -233px -503px;
   }
+  &.icon-back {
+    width: 70px;
+    height: 50px;
+    background-position: -482px -198px;
+  }
+  &.icon-searchwhite {
+    width: 15px;
+    height: 15px;
+    background-position: -434px -223px;
+  }
 }
 .iconnew-tgtt {
   background: url("../images/icons-27052020.webp") no-repeat -54px 0;
@@ -526,4 +536,256 @@ header {
 }
 #txt-time {
   font: normal 11px/13px Roboto, sans-serif;
+}
+// menu mobile
+.wrapper .full-width {
+  margin-left: -20px;
+  margin-right: -20px;
+  width: 110%;
+  width: -webkit-calc(100% + 40px);
+  width: calc(100% + 40px);
+  width: 100vw;
+}
+#menu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden;
+  overflow-y: auto;
+  z-index: 99999;
+  background-color: #fff;
+  &.hide {
+    display: none;
+  }
+  & .menu-top {
+    height: 40px;
+    line-height: 40px;
+    margin-bottom: 17px;
+    background-color: #008837;
+    color: #fff;
+
+    & .left,
+    & .right {
+      line-height: 40px;
+    }
+    & .right {
+      font-size: 40px;
+      font-weight: 100;
+      font-family: Arial, sans-serif;
+    }
+
+    & svg {
+      height: 24px;
+      display: inline;
+      margin-bottom: -6px;
+    }
+  }
+
+  & .menu-title {
+    margin-bottom: 16px;
+    color: #2e2e2e;
+    font-weight: bold;
+  }
+
+  & .menu-list {
+    margin-bottom: 5px;
+
+    & li:not(.square):not(.link) {
+      width: 47%;
+      height: 38px;
+      border-radius: 5px;
+      border: thin solid #e9eaee;
+      background-color: #f9f9f9;
+      font-size: 13px;
+      font-weight: 500;
+      line-height: 38px;
+      color: #6c6e70;
+      margin-bottom: 15px;
+      overflow: hidden;
+
+      & a {
+        text-transform: capitalize;
+        white-space: nowrap;
+      }
+
+      & svg {
+        margin: 0 3px -4.5px 8px;
+        width: 20px;
+        height: auto;
+        max-height: 30px;
+        display: inline-block;
+
+        & path {
+          fill: #008837;
+        }
+      }
+    }
+    & .list-square {
+      margin: 0 -10px;
+    }
+  }
+
+  & .separator {
+    border-bottom-width: 1px;
+  }
+  & .menu-padding {
+    height: 36px;
+  }
+}
+.menu-list {
+  &.flex {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: stretch;
+    flex-wrap: wrap;
+  }
+  &.list-square {
+    margin: 0 -10px;
+  }
+  & li.square {
+    margin-bottom: 15px;
+    display: inline-block;
+    color: #6c6e70;
+    width: calc(100% / 3);
+    font-size: 12px;
+    font-weight: 500;
+    padding: 0 10px;
+    box-sizing: border-box;
+
+    & a {
+      display: block;
+      width: 100%;
+      & > .box {
+        display: inline-block;
+        padding: 5px 12px;
+        border: 1px solid #eee;
+        border-radius: 4px;
+        margin-bottom: 5px;
+      }
+    }
+    & img {
+      display: inline-block;
+      width: 100%;
+    }
+    & .text {
+      display: block;
+    }
+  }
+
+  & li.link {
+    background-color: #c9c9c9;
+    color: #fff;
+    border-radius: 2px;
+    text-align: center;
+    max-width: 33%;
+
+    & a {
+      font: normal 14px/17px Roboto;
+      display: block;
+      padding: 5px 15px;
+    }
+  }
+}
+.separator {
+  border-bottom: 2px solid #e9eaee;
+}
+#Layer_1 {
+  width: 30px !important;
+  vertical-align: text-bottom;
+}
+.cls-1 {
+  fill: #fe0000;
+}
+.clear,
+.clearfix {
+  clear: both;
+}
+#search-form-mb {
+  position: absolute;
+  top: 40px;
+  left: 0;
+  width: 100%;
+  background: #008837;
+  height: 35px;
+  border-radius: 0 0 2px 2px;
+
+  & .wrapper {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+
+  & #search-field {
+    width: 75%;
+    width: -webkit-calc(80% - 10px);
+    width: calc(80% - 10px);
+    border: none;
+    border-radius: 5px 0 0 5px;
+    height: 25px;
+    line-height: 25px;
+    padding: 0 5px;
+    margin-top: 5px;
+    display: block;
+  }
+  & #search-btn {
+    width: 20%;
+    display: block;
+    text-align: center;
+    height: 25px;
+    line-height: 25px;
+    background: #dedede;
+    border: none;
+    border-radius: 0 5px 5px 0;
+    margin-top: 5px;
+  }
+}
+// header talk
+.headerother {
+  height: 50px;
+  background-color: #202124;
+  position: relative;
+  & .back-home {
+    display: flex;
+    align-items: center;
+    color: #fff;
+    position: absolute;
+    left: 0;
+    top: 0;
+
+    & i {
+      margin-right: 15px;
+    }
+  }
+  & .wrapper {
+    display: flex;
+    justify-content: space-between;
+    height: 100%;
+    align-items: center;
+  }
+  & .search-form {
+    width: 234px;
+    & input[type="text"] {
+      border: solid 0.5px #404040;
+      background-color: #404040;
+      padding: 0 12px;
+      line-height: 30px;
+      color: #fff;
+    }
+  }
+}
+.search-form {
+  position: relative;
+}
+.search-form input[type="text"]::-webkit-input-placeholder,
+.search-form input[type="text"]::placeholder {
+  font-style: italic;
+  color: #6c6e70;
+  opacity: 0.5;
+  font-size: 11px;
+}
+.header-talk .search-form input[type="text"]::-webkit-input-placeholder {
+  color: rgba(233, 234, 238, 0.5);
+  font-size: 12px;
 }
