--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -201,6 +201,12 @@ img {
   object-fit: cover;
 }
 /*=================================================================*/
+.text-gray-33 {
+  color: #333;
+}
+.text-gray-66 {
+  color: #666;
+}
 .text-gray-6c {
   color: #6c6e70;
 }
