--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -171,6 +171,11 @@
     height: 15px;
     background-position: -434px -223px;
   }
+  &.icon-clocksmall {
+    width: 12px;
+    height: 12px;
+    background-position: -77px -89px;
+  }
 }
 .iconnew-tgtt {
   background: url("../images/icons-27052020.webp") no-repeat -54px 0;
@@ -746,6 +751,14 @@ header {
   height: 50px;
   background-color: #202124;
   position: relative;
+
+  &.sticky:not(.active) {
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    z-index: 9999;
+  }
   & .back-home {
     display: flex;
     align-items: center;
