--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,6 @@ sub,
 sup,
 tt,
 var,
-b,
 u,
 i,
 center,
@@ -374,6 +373,14 @@ img {
 }
 
 /*=================================================================*/
+.text-gray-33 {
+  color: #333;
+}
+
+.text-gray-66 {
+  color: #666;
+}
+
 .text-gray-6c {
   color: #6c6e70;
 }
@@ -1007,6 +1014,11 @@ img {
   height: 15px;
   background-position: -434px -223px;
 }
+.icondv.icon-clocksmall {
+  width: 12px;
+  height: 12px;
+  background-position: -77px -89px;
+}
 
 .iconnew-tgtt {
   background: url("../images/icons-27052020.webp") no-repeat -54px 0;
@@ -1548,6 +1560,13 @@ header #nav .icon-expandmenu.active {
   height: 50px;
   background-color: #202124;
   position: relative;
+}
+.headerother.sticky:not(.active) {
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  z-index: 9999;
 }
 .headerother .back-home {
   display: flex;
@@ -2387,6 +2406,15 @@ header #nav .icon-expandmenu.active {
   margin-bottom: 30px;
 }
 
+.header-talk-mb-wrapper {
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  width: 100%;
+  z-index: 100;
+}
+
 .header-talk-mb {
   display: flex;
   align-items: center;
@@ -2400,6 +2428,357 @@ header #nav .icon-expandmenu.active {
   font-size: 24px;
   font-family: "Times New Roman";
   font-weight: 500;
+}
+
+.detail-main .line-datetime {
+  margin-bottom: 10px;
+  display: flex;
+  align-items: center;
+  font-family: "Roboto", Arial, Helvetica, sans-serif;
+}
+.detail-main .line-datetime > span {
+  font-size: 12px;
+  color: #6c6e70;
+}
+.detail-main .line-datetime > span i {
+  margin-bottom: -1px;
+}
+.detail-main .line-datetime > span.anots {
+  padding-right: 23px;
+  position: relative;
+  font-weight: 700;
+  color: #222;
+  font-size: 14px;
+}
+.detail-main .line-datetime > span.anots:before {
+  content: "";
+  width: 1px;
+  position: absolute;
+  background: #ccc;
+  top: 3px;
+  bottom: 3px;
+  right: 11px;
+}
+.detail-main [data-role=sapo] {
+  font-size: 16px;
+  line-height: 26px;
+  font-weight: 700;
+  color: #6c6e70;
+  margin-bottom: 15px;
+}
+.detail-main .line-share {
+  display: flex;
+  padding-bottom: 15px;
+  margin-bottom: 15px;
+  border-bottom: 1px solid #eee;
+}
+.detail-main .line-share .fb-share-button {
+  margin-right: 5px;
+}
+.detail-main .line-share .btn-cmt {
+  display: flex;
+  align-items: center;
+  border-radius: 3px;
+  background: #8b9ba7;
+  height: 20px;
+  color: #fff;
+  font: normal 12px/20px Arial;
+  padding: 0 7px;
+  margin-left: 5px;
+  cursor: pointer;
+}
+.detail-main .line-share .btn-cmt svg {
+  display: inline-block;
+  margin-right: 3px;
+  margin-bottom: -0.5px;
+}
+.detail-main .line-share .btn-cmt .numcountcmt {
+  padding-left: 5px;
+  margin-left: 2.5px;
+  border-left: thin solid #bbb;
+}
+.detail-main .line-share .mail {
+  height: 20px;
+  margin-left: auto;
+}
+.detail-main .line-share .mail .share-mail {
+  display: inline-block;
+  background: url("../images/danviet_sprite.webp") no-repeat -289px -171px;
+  background-size: 580px 564px;
+  width: 24px;
+  height: 19px;
+  border-radius: 3px;
+}
+.detail-main .related-news {
+  padding-bottom: 15px;
+  margin-bottom: 15px;
+  border-bottom: 1px solid #eee;
+  font-family: "Roboto", Arial, Helvetica, sans-serif;
+}
+.detail-main .related-news li {
+  color: #202124;
+  margin-bottom: 10px;
+  font-size: 14px;
+  font-weight: 500;
+  display: flex;
+}
+.detail-main .related-news li:before {
+  content: "";
+  width: 5px;
+  height: 5px;
+  border-radius: 50%;
+  flex-shrink: 0;
+  margin-top: 5px;
+  margin-right: 10px;
+  background: #008837;
+}
+.detail-main .related-news li:last-child {
+  margin-bottom: 0;
+}
+
+.anots svg {
+  margin-right: 3px;
+}
+
+.btn-sizep {
+  margin-left: auto;
+}
+.btn-sizep span {
+  font-weight: 700;
+  color: #6c6e70;
+  padding: 3px 14px;
+  background: #ebebeb;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.sapo {
+  font-size: 13px;
+  color: #6c6e70;
+}
+
+.sticky-ele {
+  display: none;
+}
+.sticky-ele.sticking {
+  display: flex;
+  position: fixed;
+  top: 200px;
+  flex-direction: column;
+  width: 40px;
+  margin-left: -50px;
+}
+.sticky-ele .btn-share {
+  width: 40px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #ddd;
+}
+.sticky-ele .btn-share.fb {
+  background: #234183;
+}
+.sticky-ele .btn-share.tw {
+  background: #55acee;
+}
+.sticky-ele .btn-share.zl {
+  background: #027ec9;
+}
+
+.dt-content {
+  text-align: justify;
+}
+
+.entry-body {
+  font-size: 17px;
+  line-height: 29px;
+  font-family: "Noto Serif", serif;
+  word-break: break-word;
+}
+
+.entry-body h2 {
+  font-size: 1.5em;
+}
+
+.entry-body h2,
+.entry-body h3,
+.entry-body h4,
+.entry-body h5,
+.entry-body h6 {
+  margin: 10px 0 15px;
+  font-weight: bold;
+  font-size: inherit;
+}
+
+.entry-body p {
+  margin-bottom: 15px;
+}
+
+.dt-content figure figcaption {
+  display: block;
+  padding: 10px;
+  text-align: center;
+  font-family: "arial", sans-serif;
+  font-size: 13px;
+  font-weight: 400;
+  color: #666;
+  background-color: #f2f2f2;
+  max-width: 100%;
+  line-height: 18px;
+  margin-bottom: 15px;
+}
+.dt-content figure figcaption .expEdit {
+  font-weight: normal;
+  margin: 0;
+}
+
+.box-related {
+  border-top: 3px solid #007f74;
+  border-radius: 3px;
+  border-bottom: 3px solid #007f74;
+  overflow: hidden;
+  margin-bottom: 15px;
+}
+
+.box-related-item {
+  display: flex;
+  padding: 10px 0;
+  margin: 0 10px;
+}
+.box-related-item:not(:last-child) {
+  border-bottom: 1px dotted #cbcfd3;
+}
+.box-related-item .box-related-img {
+  width: 20%;
+  flex-shrink: 0;
+}
+.box-related-item .box-related-content {
+  flex: 1;
+  padding-left: 15px;
+}
+
+.advertisement-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 20px;
+}
+
+.advertisement-heading {
+  border-bottom: 1px solid #eee;
+}
+
+.share-other {
+  padding: 10px;
+  border-radius: 2px;
+  background-color: #f3f3f3;
+  margin: 25px 0;
+}
+.share-other .share-items {
+  display: flex;
+  align-items: flex-start;
+  height: 20px;
+}
+.share-other .share-items .fb-share-button, .share-other .share-items .fb-like {
+  margin-right: 5px;
+}
+.share-other .share-items [class*=itemshare-] {
+  width: 20px;
+  height: 20px;
+  background-image: url("../images/sprite-socials.webp");
+  background-repeat: no-repeat;
+  background-size: 62px;
+  margin-right: 5px;
+}
+.share-other .itemshare-twitter {
+  background-position: -21px 0;
+}
+.share-other .itemshare-linked {
+  background-position: -42px 0;
+}
+
+.tags {
+  font-size: 12px;
+  margin-bottom: 25px;
+}
+.tags > ul {
+  display: flex;
+  flex-wrap: wrap;
+}
+.tags > ul li {
+  margin-right: 8px;
+  margin-bottom: 8px;
+}
+.tags > ul li a {
+  display: block;
+  padding: 5px 12px;
+  border-radius: 12px;
+  background-color: #f3f3f3;
+  color: #80868b;
+}
+
+.box-dvdesc {
+  border-radius: 5px;
+  background-color: #80868b;
+  padding: 18px 20px;
+  display: flex;
+  color: #fff;
+}
+.box-dvdesc .text {
+  padding-right: 50px;
+  font-size: 14px;
+}
+.box-dvdesc .fb-page {
+  width: 180px;
+}
+
+.box-cmt {
+  margin: 20px 0;
+  border-bottom: 3px solid #eee;
+}
+
+.box_samecate .sc-heading {
+  text-transform: capitalize;
+  border-bottom: 1px solid #eee;
+  display: flex;
+  justify-content: space-between;
+}
+
+.date-select {
+  display: flex;
+  align-items: center;
+  font-size: 13px;
+  font-weight: 500;
+  color: #6c6e70;
+  margin-left: auto;
+}
+.date-select select {
+  border: thin solid #eee;
+  background: #eee;
+  border-radius: 2px;
+  color: #202124;
+  padding: 5px;
+  margin-right: 10px;
+  font: 500 13px Roboto;
+}
+.date-select select:first-child {
+  margin-left: 12px;
+}
+.date-select .linkcate {
+  width: 53px;
+  height: 28px;
+  border-radius: 2px;
+  background-color: #6c6e70;
+  color: #fff;
+  text-transform: uppercase;
+  text-align: center;
+  padding: 5px;
+}
+
+.read-other-heading {
+  text-transform: capitalize;
+  border-top: 3px solid #eee;
+  border-bottom: 1px solid #eee;
 }
 
 .header-ema {
