--- a/css/responsive.css
+++ b/css/responsive.css
@@ -517,7 +517,8 @@
   .detail-main,
 .dt-content,
 .tags,
-.box-cmt {
+.box-cmt,
+.read-other-heading {
     padding-left: 20px;
     padding-right: 20px;
   }
@@ -545,6 +546,70 @@
   }
   .box-dvdesc .fb-page {
     margin-top: 20px;
+  }
+
+  .line-share .btn-cmt .cls-1 {
+    fill: #fe0000;
+  }
+
+  .advertisement-container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .advertisement-container .advertisement-item:first-child {
+    grid-column: 1/3;
+    grid-row: 1/2;
+  }
+  .advertisement-container .advertisement-title {
+    font-size: 15px;
+  }
+
+  .box_samecate .sc-heading {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+  .box_samecate .sc-heading h3 {
+    color: #111;
+  }
+  .box_samecate .advertisement-container {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+  .box_samecate .advertisement-item:first-child {
+    grid-column: 1/2;
+    grid-row: 1/2;
+  }
+
+  .hot-news .advertisement-heading, .hot-news .hot-news-container {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+  .hot-news .hightlight-top__list {
+    padding-left: 0;
+    padding-right: 0;
+  }
+
+  /*====================================================================== ema*/
+  .ema-container {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+
+  .ema-container figure.expNoEdit {
+    margin-left: -20px !important;
+    margin-right: -20px !important;
+  }
+
+  .ema-container figure.expNoEdit.right {
+    width: 100% !important;
+    max-width: 100%;
+    margin-left: 0 !important;
+    float: unset;
+  }
+
+  /*====================================================================== detail image*/
+  figure.expNoEdit[type=Photo] {
+    width: 100%;
+    margin: auto;
   }
 }
 
