--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -16,6 +16,13 @@
   font-weight: bold;
   font-style: normal;
 }
+@font-face {
+  font-family: "Century";
+  src: url("../fonts/century/cebswfte.ttf") format("truetype");
+  font-weight: bold;
+  font-style: normal;
+}
+
 html {
   box-sizing: border-box;
   scroll-behavior: smooth;
@@ -87,6 +94,10 @@ img {
   font-family: "Helvetical", serif;
 }
 /*===========================================================================*/
+.w-650 {
+  max-width: 40.625rem;
+  margin: 0 auto;
+}
 .w-980 {
   max-width: 61.25rem;
   margin: 0 auto;
