--- a/scss/style.scss
+++ b/scss/style.scss
@@ -8,5 +8,6 @@
 @import "./cate_dan_viet_talk";
 @import "./detail";
 @import "./emagazine";
+@import "./detail_image";
 @import "./popup";
 @import "./footer";
